Suppresssion de liens inutiles

--- a/view/adfab-core/dashboard/index.phtml
+++ b/view/adfab-core/dashboard/index.phtml
@@ -1,9 +1,5 @@
 <h1><?php echo $this->translate('Dashboard'); ?></h1>
 
 <ul class="dashboard-home">
-	<li><a href="<?php echo $this->url('zfcadmin/adfabgame/list');?>"><img src="<?php echo $this->basePath('images/admin/icon-games.png');?>" border="0" /><br/>Les jeux</a></li>
-	<li><a href="<?php echo $this->url('zfcadmin/adfabpartnership_admin/list') ?>"><img src="<?php echo $this->basePath('images/admin/icon-partners.png');?>" border="0" /><br/>Les partenaires</a></li>
-	<li><a href="<?php echo $this->url('zfcadmin/adfabcmsadmin/pages/list') ?>"><img src="<?php echo $this->basePath('images/admin/icon-articles.png');?>" border="0" /><br/>les articles</a></li>
-	<li><a href="<?php echo $this->url('zfcadmin/adfabfaq_admin/list') ?>"><img src="<?php echo $this->basePath('images/admin/icon-faq.png');?>" border="0" /><br/>F.A.Q.</a></li>
-	<li><a href="<?php echo $this->url('zfcadmin/adfabuser/list') ?>"><img src="<?php echo $this->basePath('images/admin/icon-users.png');?>" border="0" /><br/>Les utilisateurs</a></li>
+	<li>Bienvenue sur la home de l'admin</li>
 </ul>
