--- a/view/admin/assets/css/administration.css
+++ b/view/admin/assets/css/administration.css
@@ -67,7 +67,7 @@ body {
   background: url('../images/admin/icon-user.png') no-repeat left center;
   padding-left: 20px;
   color: #077798;
-} 
+}
 .userbar .right .btn-website {
   background: url('../images/admin/button-website.png') no-repeat center center;
   height: 23px;
@@ -248,7 +248,7 @@ h1 {
   padding: 0;
 }
 .btn-admin a {
-  background: #fff; 
+  background: #F3F3F3;
   display: inline-block;
   padding: 3px 10px;
   border: 1px solid #e5e5e5;
@@ -411,6 +411,14 @@ h1 {
   width: 200px;
   text-align: right;
 }
+.tab-pane .label-input.heading label,
+.facebook-admin .label-input.heading label {
+  vertical-align: top;
+}
+.tab-pane .label-input #cke_block_heading,
+.facebook-admin .label-input #cke_block_heading {
+  display: inline-block;
+}
 .tab-pane #cke_welcomeBlock,
 .facebook-admin #cke_welcomeBlock,
 .tab-pane #cke_termsBlock,
@@ -458,4 +466,227 @@ h1 {
   height: 30px;
   padding: 0 10px;
   margin: 0;
+}
+.statistics-tab {
+  background: #eee;
+  margin: 0 auto;
+  padding: 20px 3%;
+}
+.statistics-tab .statistics-form {
+  border-bottom: 1px solid #4e4e4e;
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+  text-align: center;
+}
+.statistics-tab .statistics-form label {
+  display: inline;
+  margin: 0;
+}
+.statistics-tab .statistics-form input[type="datetime"] {
+  width: 200px;
+  height: auto;
+  margin: 0;
+}
+.statistics-tab .statistics-form input[type="text"] {
+  width: 50px;
+  height: auto;
+  margin: 0;
+}
+.statistics-tab .statistics-form input[type="submit"] {
+  height: 26px;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  -o-border-radius: 3px;
+  border-radius: 3px;
+  -moz-box-shadow: none;
+  -webkit-box-shadow: none;
+  -o-box-shadow: none;
+  box-shadow: none;
+  outline: none;
+  background: #087EA2;
+  color: #ffffff;
+  border: none;
+  margin-left: 5px;
+  font-weight: bold;
+}
+.statistics-tab .statistics-form input[type="submit"]:hover {
+  background: #05607B;
+}
+.statistics-tab .table .light {
+  background: #ffffff;
+}
+.statistics-tab .table td {
+  padding: 4px 8px;
+}
+#statistics {
+  width: 65%;
+}
+#statistics .statistics-form {
+  border-bottom: 1px solid #4e4e4e;
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+}
+#statistics .table th {
+  border-top: none;
+}
+#statistics-games {
+  width: 40%;
+  min-width: 400px;
+}
+#statistics-games .table {
+  margin: 20px 0 0 0;
+}
+#statistics-export {
+  width: 65%;
+}
+#statistics-export .statistics-form {
+  border: none;
+  padding: 0;
+  margin: 0;
+}
+#statistics-export .statistics-form .row-fluid {
+  margin: 0 0 15px;
+}
+#statistics-export .statistics-form .row-fluid.button-top {
+  margin: 0 0 20px;
+}
+#statistics-export .statistics-form .row-fluid.button-bottom {
+  margin: 20px 0 0;
+}
+#statistics-export .statistics-form .row-fluid .block-right {
+  text-align: left;
+  position: relative;
+}
+#statistics-export .statistics-form .row-fluid .block-right label {
+  display: block;
+  margin-bottom: 5px;
+}
+#statistics-export .statistics-form .row-fluid .block-right label input[type="text"] {
+  width: 100px;
+}
+#statistics-export .statistics-form .row-fluid .block-right label input[type="datetime"] {
+  width: 100px;
+}
+#statistics-export .statistics-form .row-fluid .block-right label.error {
+  color: #ff0000;
+}
+#statistics-export .statistics-form .row-fluid .block-right.optin label,
+#statistics-export .statistics-form .row-fluid .block-right.validatedemail label,
+#statistics-export .statistics-form .row-fluid .block-right.badges label,
+#statistics-export .statistics-form .row-fluid .block-right.member-id label {
+  display: inline;
+  margin: 0 48px 0 0;
+}
+#statistics-export .statistics-form .row-fluid .block-right.member-id label.error {
+  padding-left: 5px;
+}
+#statistics-export .statistics-form .row-fluid .block-right.select-input input[type="text"] {
+  vertical-align: top;
+}
+#statistics-export .statistics-form .row-fluid .block-right.select-input label.error {
+  margin: 0 0 0 29%;
+}
+#statistics-export .statistics-form .row-fluid .block-right.prizecategories label {
+  display: inline-block;
+  width: 48%;
+}
+#statistics-export .statistics-form .row-fluid .block-right.prizecategories label input {
+  margin: -5px 10px 0 0;
+}
+#statistics-export .statistics-form .row-fluid .block-right #memberid-input {
+  margin-left: -40px;
+  width: 120px;
+}
+#statistics-export .statistics-form .row-fluid .block-right #zipcode-input {
+  width: 120px;
+}
+#statistics-export .statistics-form .row-fluid .block-right .birthdateform-radio label,
+#statistics-export .statistics-form .row-fluid .block-right .inscriptionform-radio label,
+#statistics-export .statistics-form .row-fluid .block-right .nbpartform-radio label {
+  margin: 0 0 15px;
+}
+#statistics-export .statistics-form .row-fluid .block-right .birthdateform-between,
+#statistics-export .statistics-form .row-fluid .block-right .inscriptionform-between,
+#statistics-export .statistics-form .row-fluid .block-right .nbpartform-betweennb {
+  position: absolute;
+  top: 28px;
+  left: 72px;
+}
+#statistics-export .statistics-form .row-fluid .block-right .birthdateform-between label.error,
+#statistics-export .statistics-form .row-fluid .block-right .inscriptionform-between label.error,
+#statistics-export .statistics-form .row-fluid .block-right .nbpartform-betweennb label.error {
+  position: absolute;
+  top: -20px;
+}
+#statistics-export .statistics-form .row-fluid .block-right #birthdateequal-input {
+  position: absolute;
+  top: 63px;
+  left: 72px;
+}
+#statistics-export .statistics-form .row-fluid .block-right .nbpartform-between {
+  position: absolute;
+  top: 30px;
+  left: 72px;
+}
+#statistics-export .statistics-form .row-fluid .block-right .nbpartform-betweennb input {
+  width: 120px;
+}
+#statistics-export .statistics-form .row-fluid .block-right .nbpartform-between label.error {
+  position: absolute;
+  left: 72px;
+}
+#statistics-export .statistics-form .row-fluid .block-right .hardbounceform-between {
+  position: absolute;
+  top: 68px;
+  left: 72px;
+}
+#statistics-export .statistics-form .row-fluid .block-right .hardbounceform-between label.error {
+  position: absolute;
+  left: 72px;
+}
+#statistics-export .statistics-form .row-fluid .block-left {
+  text-align: right;
+  padding: 3px 0 0;
+}
+#statistics-export .statistics-form .row-fluid .block-left.label-radio {
+  padding: 0;
+}
+#statistics-export .statistics-form input[type="text"],
+#statistics-export .statistics-form input[type="datetime"] {
+  height: 21px;
+  line-height: 21px;
+}
+#statistics-export .statistics-form input[type="text"] {
+  width: 250px;
+}
+#statistics-export .statistics-form input[type="datetime"] {
+  width: 120px;
+}
+#statistics-export .statistics-form select {
+  width: 28%;
+}
+#statistics-export .statistics-form button {
+  height: 26px;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  -o-border-radius: 3px;
+  border-radius: 3px;
+  -moz-box-shadow: none;
+  -webkit-box-shadow: none;
+  -o-box-shadow: none;
+  box-shadow: none;
+  outline: none;
+  background: #087EA2;
+  color: #ffffff;
+  border: none;
+  margin-left: 5px;
+  font-weight: bold;
+}
+#statistics-export .statistics-form button:hover {
+  background: #05607B;
+}
+#statistics-export .result .right {
+  text-align: center;
+  display: block;
+  margin: 15px 0 0;
 }
